syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractDescriptorProto";

import "sdc/biceps/extension.proto";
import "sdc/biceps/codedvalue.proto";
import "google/protobuf/wrappers.proto";
import "sdc/biceps/safetyclassification.proto";

message AbstractDescriptorMsg {
  ExtensionMsg element1 = 1;
  CodedValueMsg type = 2;
  string a_handle = 3;
  google.protobuf.UInt64Value a_descriptor_version = 4;
  SafetyClassificationMsg a_safety_classification = 5;
}
