syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "LocalizedTextWidthProto";


message LocalizedTextWidthMsg {
  enum EnumType {
    XS = 0;
    S = 1;
    M = 2;
    L = 3;
    XL = 4;
    XXL = 5;
  }
  EnumType enum_value = 1;
}
