syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "PhysicalConnectorInfoType";

import "sdc/biceps/extension.proto";
import "sdc/biceps/localizedtext.proto";

message PhysicalConnectorInfo {
  Extension element1 = 1;
  repeated LocalizedText label = 2;
  int32 a_number = 3;
}
